<resources>
    <string name="app_name">Watchly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="welcome_back_nyou_ve_been_missed">Welcome back.\nYou\'ve been missed!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="let_s_register_you_in">Let\'s register you in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="succes_registering">Successfully registered</string>
    <string name="by_registering_you_will_be_nable_to_user_our_service">By registering you will be\nable to user our service</string>
    <string name="email_empty">Please enter an email</string>
    <string name="password_empty">Please enter a password</string>
    <string name="confirm_pass_empty">Please confirm your password</string>
    <string name="invaild_email">Invalid Email</string>
    <string name="weak_password">Password too weak</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="field_empty">Fields Empty</string>
    <string name="home">Home</string>
    <string name="gaming">Gaming</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="let_s_complete_your_nregistration">Let\'s Complete your \nregistration</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="continue_1">Continue</string>
    <string name="finish">Finish</string>
    <string name="close_to_finish_registration">One more step to finish</string>
    <string name="add_one_user">Please add at least one sub user</string>
    <string name="add_a_sub_user">Add a sub user</string>
    <string name="add">Add</string>
    <string name="name_subuser_didnt_add">Please at least add a name</string>
    <string name="settings_sub_user">Sub User Settings</string>
    <string name="change_name">Change Name</string>
    <string name="failed_to_update_sub_user_name">Failed to update name</string>
    <string name="failed_to_update_sub_user_image">Failed to update image</string>
    <string name="delete_sub_user">Delete Sub User</string>
    <string name="are_your_sure">Are your sure?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="deleteing_sub_user_acc_dialog_message">Are you sure you want to delete this sub user account?</string>
    <string name="deleted_sub_user_acc">Successfully delete sub user account</string>
    <string name="updateed_sub_user">Successfully updated sub user profile</string>
    <string name="search">Search</string>
    <string name="app_settings">App Settings</string>
    <string name="change_app_settings">Change App Settings</string>
    <string name="change_sub_user">Change Sub user</string>
    <string name="sub_user_settings">Sub User Settings</string>
    <string name="sub_user">Sub User</string>
    <string name="video">Video</string>
    <string name="downloads">Downloads</string>
    <string name="autoplay">Autoplay</string>
    <string name="autoplay_next_video">Autoplay next video</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="check_network">Check Network</string>
    <string name="download_location">Download Location</string>
    <string name="delete_all_downloads">Delete All Downloads</string>
    <string name="video_quality">Video Quality</string>
    <string name="notifications">Notifications</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="sub_users">Sub Users</string>
    <string name="channel">Channel</string>
    <string name="create_channel">Create Channel</string>
    <string name="channel_already_created">You have already created a channel</string>
    <string name="user">User</string>
    <string name="user_settings">User Settings</string>
    <string name="profile_image">Profile Image</string>
    <string name="other">Other</string>
    <string name="log_out">Log out</string>
    <string name="change_lastname">Change Lastname</string>
    <string name="change_username">Change Username</string>
    <string name="change_image">Change Image</string>
    <string name="change_password">Change Password</string>
    <string name="account_details">Account Details</string>
    <string name="delete_account">Delete Account</string>
    <string name="channel_settings">Channel Settings</string>
    <string name="change_user_settings">Change User Settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="failed_to_get_name">Something went wrong fetching name</string>
    <string name="current_name">"Current Name: "</string>
    <string name="name_changed">Successfully change your name</string>
    <string name="current_lastname">Current Lastname</string>
    <string name="current_username">Current Username:</string>
    <string name="user_changes_made">User changes were been made</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="please_select_an_image">Please select an image first</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="succesfully_created_channel">Successfully created your channel</string>
    <string name="channel_name_missin">Please add a channel name</string>
    <string name="please_create_a_channel">Please create a channel first</string>
    <string name="change_channel_settings">Change Channel Settings</string>
    <string name="videos">Videos</string>
    <string name="manage_videos">MANAGE VIDEOS</string>
    <string name="uploads">Uploads</string>
    <string name="more_info">More Info</string>
    <string name="delete_channel">Delete Channel</string>
    <string name="no_description">No description added</string>
    <string name="change_your_channel_name">Change Your Channel Name</string>
    <string name="ok">OK</string>
    <string name="change_your_channel_description">Change your channel description</string>
    <string name="no_changes_made">No Changes Made</string>
    <string name="select_and_video">Select an Video</string>
    <string name="caption_your_video">Caption Your Video</string>
    <string name="visibility">Visibility</string>
    <string name="upload_video">Upload Video</string>
    <string name="add_details_video_uploading">Add Details</string>
    <string name="something_went_wrong_getting_channel_data">Something went wrong getting channel data</string>
    <string name="video_title">Add your video tittle</string>
    <string name="add_custom_thumbnail">Add Custom Thumbnail</string>
    <string name="add_your_video_description">Add your video description</string>
    <string name="please_create_a_channel_first">Please create a channel first</string>
    <string name="public_video_visibility">Public</string>
    <string name="private_video_visibility">Private</string>
    <string name="set_video_visibility">Set Video Visibility</string>
    <string name="public_video">Your video will be public, everyone can see it and search for it</string>
    <string name="private_video">Your video will be private, only you can see it</string>
    <string name="settings">Settings</string>
    <string name="name_mission_upload_video">Please add at least name</string>
    <string name="please_add_a_thumbnail_for_the_video">Please add a thumbnail for the video</string>
    <string name="down">Down</string>
    <string name="Subscribe">Subscribe</string>
    <string name="comments">Comments</string>
    <string name="gallery">GALLERY</string>
    <string name="video_comments">Video Comments</string>
    <string name="add_a_comment">Add A Comment</string>
    <string name="be_the_first_to_comment_on_this_video">Be the first to comment on this video</string>
    <string name="views">Views</string>
    <string name="unSubscribe">Unsubscribe</string>
    <string name="oops_no_video_data">OOPS!! No Video Data</string>
    <string name="user_didnt_create_a_channel_yet">This user didnt create a channel yet</string>

</resources>