<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainColor1"
    tools:context=".ui.fragments.AppSettings.AppSettingsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/channel"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />



            <TextView
                android:id="@+id/CreateChannel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/create_channel"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"
                app:drawableStartCompat="@drawable/ic_baseline_create_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />

            <TextView
                android:id="@+id/ChannelSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/channel"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"
                app:drawableStartCompat="@drawable/ic_baseline_account_box_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />


            <TextView
                android:id="@+id/videoSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/video"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:text="@string/video_quality"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_baseline_high_quality_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/notifications"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:text="@string/allow_notifications"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_baseline_notifications_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />



            <TextView
                android:id="@+id/Downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/downloads"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/download_location"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/delete_all_downloads"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"
                app:drawableStartCompat="@drawable/ic_baseline_delete_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />

            <TextView
                android:id="@+id/AutoPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/autoplay"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/autoplay_next_video"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"
                app:drawableStartCompat="@drawable/ic_baseline_airplay_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />

            <TextView
                android:id="@+id/About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="About Phone"
                android:clickable="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_baseline_phone_android_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"
                app:drawableStartCompat="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />


            <TextView
                android:id="@+id/Diagnostics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/diagnostics"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name" />


            <TextView
                android:id="@+id/CheckNetworkConnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/check_network"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"

                app:drawableStartCompat="@drawable/ic_baseline_network_check_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:focusable="true" />






        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>