<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/MainColor1"
    tools:context=".ui.fragments.user_settings.ChangeImage">


    <LinearLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/change_image"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/Save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            app:cardCornerRadius="15dp"
            tools:layout_editor_absoluteY="106dp">

            <ImageView
                android:id="@+id/CurrentImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:src="@color/GrayTextColor" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            tools:layout_editor_absoluteX="311dp"
            tools:layout_editor_absoluteY="106dp">

            <ImageView
                android:id="@+id/NewImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:src="@color/GrayTextColor" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="50dp"
        android:background="@drawable/btn_bg"
        android:text="@string/open_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>